--- a/core/tests/minimal/output/index.html
+++ b/core/tests/minimal/output/index.html
@@ -1,1 +1,26 @@
-Hello World!
+<html>
+    <meta>
+        <title>Welcome!</title>
+    </meta>
+
+    <body>
+        <nav>
+        <a href="/">Home</a>
+        <a href="/products">PRODUCTS</a>
+        <a href="/about">ABOUT</a>
+        </nav>
+        <ul>
+        <li>ABOUT (/about)</li>
+        <li>PRODUCTS (/products)</li>
+        </ul>
+
+        <h1>Minimal Website</h1>
+<p>This is the page body and it includes CommonMark shizzle, like:</p>
+<ul>
+<li><em>italic</em></li>
+<li><strong>bold</strong></li>
+<li><strong><em>bold italic</em></strong></li>
+</ul>
+
+    </body>
+</html>
